syntax = "proto3";

package models.product.v1;

message Product {
  string id = 1;
  string name = 2;
  string brand_id = 3;
}
